--- a/doctor-service.properties
+++ b/doctor-service.properties
@@ -1,1 +1,16 @@
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/hospital_doctor
+spring.datasource.username = root
+spring.datasource.password = Prabhakar@8008
 
+ 
+# Hibernate
+#It is ORM(Object relational mapping ) tool and used to provide the JPA methods implemetation.
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql= true
+spring.main.allow-circular-references=true
+
+
+
+spring.application.name=DOCTOR-SERVICE
